--- a/software.html
+++ b/software.html
@@ -39,12 +39,22 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698461619-software-engineer-backend-inventory'>BlaBlaCar Software Engineer Backend - Inventory | SmartRecruiters</a></h5> 
+<h5><a href='https://sveltejobs.dev/jobs/harvey-nash-sr-software-engineer'>Sr. Software Engineer - Svelte Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://kuonitumlare.recruitee.com/o/sr-software-engineer'>
+      Sr. Software Engineer - Kuoni Tumlare
+    </a></h5> 
+<p><span class="badge badge-light">Delhi, India</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698461619-software-engineer-backend-inventory'>BlaBlaCar Software Engineer Backend - Inventory | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=osfrbfw3&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=nrOfoMw9'>New Relic Careers - Senior Software Engineer - Repeatability, Automation, Disaster</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Portland, Oregon  San Francisco, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5425'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
@@ -52,11 +62,11 @@
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5426'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5427'>Software Engineer I - SWD -University Recruiting - TriNet Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5428'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
@@ -91,7 +101,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.php-resource.de/jobs/job,45566,Software-Engineer-mwd-Automotive.htm'>Software Engineer (m/w/d) Automotive Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.php-resource.de/jobs/job,45566,Software-Engineer-mwd-Automotive.htm'>Software Engineer (m/w/d) Automotive Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -115,7 +125,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/7119qgjsm8kedb4ho7oqw8zcpy'>Sr. Software Engineer - C++ | Strategic Employment</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/7119qgjsm8kedb4ho7oqw8zcpy'>Sr. Software Engineer - C++ | Strategic Employment</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -179,7 +189,7 @@
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1938642'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1938642'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -219,7 +229,7 @@
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kariusdx/831fede0-f883-4d6f-b548-e8412ec96fec'>Karius - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/kariusdx/831fede0-f883-4d6f-b548-e8412ec96fec'>Karius - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -231,7 +241,7 @@
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://brainlab.softgarden.io/job/5015097/Software-Engineer-Tracking-Infrastructure?jobDbPVId=14376762&amp;l=en'>Software Engineer - Tracking Infrastructure</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brainlab.softgarden.io/job/5015097/Software-Engineer-Tracking-Infrastructure?jobDbPVId=14376762&amp;l=en'>Software Engineer - Tracking Infrastructure</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -279,7 +289,7 @@
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-identity-experience-1886374/?gh_src=d392d1b71'>Software Engineer, Identity Experience | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-identity-experience-1886374/?gh_src=d392d1b71'>Software Engineer, Identity Experience | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -295,7 +305,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698439838-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698439838-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -325,7 +335,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/realtor/6c40b5b9-5371-43af-a35d-781928df09e9'>realtor.com - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/realtor/6c40b5b9-5371-43af-a35d-781928df09e9'>realtor.com - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -411,11 +421,11 @@
 <p><span class="badge badge-light">San Francisco, CA  San Francisco</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q76aVfw2&k=Job&j=o6Fo9fw2&__jvst=Employee+Referral&__jvsd=sk08BgwO&__jvsc=Twitter&bid=nl91nMw9'>Progress Careers - Senior Software Engineer - .NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q76aVfw2&k=Job&j=o6Fo9fw2&__jvst=Employee+Referral&__jvsd=sk08BgwO&__jvsc=Twitter&bid=nl91nMw9'>Progress Careers - Senior Software Engineer - .NET</a></h5> 
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/730e9c476ac5-senior-software-engineer-interactions'>Senior Software Engineer - Interactions at Benefits Data Trust</a></h5> 
+<h5><a href='https://benefits-data-trust.breezy.hr/p/730e9c476ac5-senior-software-engineer-interactions'>Senior Software Engineer - Interactions at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -431,19 +441,11 @@
 <p><span class="badge badge-light">Arlington, VA Arlington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698433448-software-engineer-square-capital-full-stack'>Square Software Engineer, Square Capital - Full Stack | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698433448-software-engineer-square-capital-full-stack'>Square Software Engineer, Square Capital - Full Stack | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698433249-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Beaverton, OR, USA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/vonage/jobs/4490557002'>Job Application for Sr. Software Engineer at Vonage</a></h5> 
-<p><span class="badge badge-light">Holmdel, NJ</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
